# warpaffine_zeiss

./: .editorconfig  .gitignore  .mega-linter.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt
.github/workflows/: cmake_linux_x64.yml  cmake_windows_x64.yml  codeql.yml  mega-linter.yml  reuse.yml
.reuse/: dep5
documentation/: architecture.md  building.md  documentation.md  notes.md  usage.md  version-history.md
libwarpaffine/: .clang-tidy  BrickAllocator.cpp  BrickAllocator.h  CMakeLists.txt  LibWarpAffine_Config.h.in  appcontext.cpp  appcontext.h  brick.h  calcresulthash.cpp  calcresulthash.h  cmdlineoptions.cpp  cmdlineoptions.h  cmdlineoptions_enums.h  configure.cpp  configure.h  consoleio.cpp  consoleio.h  czi_helpers.cpp  czi_helpers.h  deskew_helpers.cpp  deskew_helpers.h  document_info.h  dowarp.cpp  dowarp.h  geotypes.h  main.cpp  main.h  operationtype.h  printstatistics.cpp  printstatistics.h  utilities.cpp  utilities.h  utilities_windows.h
libwarpaffine/brickreader/: BrickReader.cpp  IBrickReader.h  brick_bucket_manager.cpp  brick_bucket_manager.h  brick_coordinate.h  brick_enumerator.cpp  brick_enumerator.h  czi_brick_reader.cpp  czi_brick_reader.h  czi_brick_reader2.cpp  czi_brick_reader2.h  czi_brick_reader_base.cpp  czi_brick_reader_base.h  czi_linear_brick_reader.cpp  czi_linear_brick_reader.h  linearreading_orderhelper.cpp  linearreading_orderhelper.h
libwarpaffine/mmstream/: IStreamEx.h  StreamEx.cpp  StreamEx.h  mmstream.cpp  mmstream.h
libwarpaffine/sliceswriter/: ISlicesWriter.h  NullSlicesWriter.cpp  NullSlicesWriter.h  SlicesWriter.cpp  SlicesWriterTbb.cpp  SlicesWriterTbb.h
libwarpaffine/taskarena/: ITaskArena.h  taskarena.cpp  taskarena_tbb.cpp  taskarena_tbb.h
libwarpaffine/warpaffine/: IWarpAffine.h  WarpAffine.cpp  WarpAffineNull.cpp  WarpAffineNull.h  WarpAffine_Fast.cpp  WarpAffine_Fast.h  WarpAffine_IPP.cpp  WarpAffine_IPP.h  WarpAffine_Reference.cpp  WarpAffine_Reference.h  reference_warp.cpp  reference_warp.h
modules/: CheckForLibAtomicRequired.cmake  FindIPP.cmake  libCZI.cmake
scripts/: codeql-build.sh
warpaffine/: CMakeLists.txt  THIRD_PARTY_LICENSES_ARTIFACT_DISTRIBUTION.txt  WarpAffine_Config.h.in  inc_libwarpaffine.h  main.cpp  resource_data.h.in  warpaffine-longpaths.manifest  warpaffine.ico.license  warpaffine.rc
warpaffine_unittests/: CMakeLists.txt  brick_enumerator_tests.cpp  cmdlineoptions_tests.cpp  czi_helpers_tests.cpp  mem_output_stream.cpp  mem_output_stream.h  testutilities.cpp  testutilities.h  utilities.cpp  utilities.h  utilities_tests.cpp  warpaffine_tests.cpp  warpafine_unittests_config.h.in  xycoordinate_tests.cpp
